--- a/src/views/App.scss
+++ b/src/views/App.scss
@@ -3,8 +3,9 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
+  animation: App-logo-spin 4s linear 0s infinite;
 }
 
 @media (prefers-reduced-motion: no-preference) {
