--- a/src/views/App.scss
+++ b/src/views/App.scss
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
 }
-
+button {
+  margin: 0 0 0 10px;
+  cursor: pointer;
+}
 .App-logo {
   height: 10vmin;
   pointer-events: none;
@@ -17,10 +20,10 @@
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
+  // justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
